--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ buildscript {
         springBootVersion = '2.0.3.RELEASE'
     }
     repositories {
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+mavenCentral()
     }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
@@ -23,7 +24,9 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+mavenCentral()
 }
 
 
